src/test/ui/privacy/private-inferred-type-3.stderr
error: function `ext::priv_fn` is private
  --> $DIR/private-inferred-type-3.rs:16:5
   |
LL |     ext::m!();
   |     ^^^^^^^^^^ private
   |
   = note: this error originates in a macro outside of the current crate (in Nightly builds, run with -Z external-macro-backtrace for more info)

error: static `PRIV_STATIC` is private
  --> $DIR/private-inferred-type-3.rs:16:5
   |
LL |     ext::m!();
   |     ^^^^^^^^^^ static not accessible from here
   |
   = note: this error originates in a macro outside of the current crate (in Nightly builds, run with -Z external-macro-backtrace for more info)

error: enum `ext::PrivEnum` is private
  --> $DIR/private-inferred-type-3.rs:16:5
   |
LL |     ext::m!();
   |     ^^^^^^^^^^ private
   |
   = note: this error originates in a macro outside of the current crate (in Nightly builds, run with -Z external-macro-backtrace for more info)

error: method `ext::PrivTrait::method` is private
  --> $DIR/private-inferred-type-3.rs:16:5
   |
LL |     ext::m!();
   |     ^^^^^^^^^^ private
   |
   = note: this error originates in a macro outside of the current crate (in Nightly builds, run with -Z external-macro-backtrace for more info)

error: struct `ext::PrivTupleStruct` is private
  --> $DIR/private-inferred-type-3.rs:16:5
   |
LL |     ext::m!();
   |     ^^^^^^^^^^ private
   |
   = note: this error originates in a macro outside of the current crate (in Nightly builds, run with -Z external-macro-backtrace for more info)

error: struct `ext::PubTupleStruct` is private
  --> $DIR/private-inferred-type-3.rs:16:5
   |
LL |     ext::m!();
   |     ^^^^^^^^^^ private
   |
   = note: this error originates in a macro outside of the current crate (in Nightly builds, run with -Z external-macro-backtrace for more info)

error: method `<ext::Pub<u8>>::priv_method` is private
  --> $DIR/private-inferred-type-3.rs:16:5
   |
LL |     ext::m!();
   |     ^^^^^^^^^^ private
   |
   = note: this error originates in a macro outside of the current crate (in Nightly builds, run with -Z external-macro-backtrace for more info)

error: aborting due to 7 previous errors

